<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Local">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_notificacion_local_key"
            android:summary="@string/pref_notificacion_local_summary"
            android:title="@string/pref_notificacion_local_tittle" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Externa">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_notificacion_externa_key"
            android:summary="@string/pref_notificacion_externa_summary"
            android:title="@string/pref_notificacion_externa_tittle" />
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_notificacion_externa_email_default_value"
            android:key="@string/pref_notificacion_externa_email_sender_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_externa_notificacion_email_sender_title"
            android:summary="@string/pref_notificacion_externa_email_default_value"
            android:inputType="textWebEmailAddress" />
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_notificacion_externa_email_password_default_value"
            android:inputType="textWebPassword"
            android:key="@string/pref_notificacion_externa_email_password_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_externa_notificacion_email_password_title"
            android:summary="******"/>
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_notificacion_externa_email_default_value"
            android:key="@string/pref_notificacion_externa_email_recipient_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_externa_notificacion_email_recipient_title"
            android:summary="@string/pref_notificacion_externa_email_default_value"
            android:inputType="textWebEmailAddress" />
    </PreferenceCategory>



</PreferenceScreen>
